Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-6432

Font regression in search panel

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 2.4.0
    • Qt Creator 2.4.0-beta
    • All Other Issues
    • None
    • lubuntu (lxde)
    • 1d97b604c076c41a0b111922b0046690096a9562

      The preferred font is ignored in the newly improved search panel. As you can clearly see in the screenshot, the monospace font from my editor window is quite different than from the barely readable one in the search panel. Thanks for preventing future eye strains.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            luchio Pierre-Luc Samuel
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes