Set text editor font also for new search panels.

Task-number: QTCREATORBUG-6432

Change-Id: I67b6a92faccc65f92cc612abf210c0a2eca4860b
Reviewed-by: Leandro T. C. Melo <leandro.melo@nokia.com>